--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -97,15 +97,15 @@ jobs:
       env:
         artifactoryApiKey: ${{ secrets.artifactoryApiKey }}
       run: |
-        gui_ver="v0.6.0-rc3"
-        zipfile=open-ephys-${gui_ver}-mac-beta.zip
+        gui_ver="v0.6.0-dev"
+        zipfile=open-ephys-${gui_ver}-mac.zip
         cd Build/Release
         mkdir open-ephys
         mv open-ephys.app/ open-ephys
         cp ../../LICENSE open-ephys
         zip -r $zipfile open-ephys
         user_info="X-JFrog-Art-Api:$artifactoryApiKey"
-        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Test/mac/$zipfile"
+        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Dev/mac/$zipfile"
         brew install create-dmg && create-dmg \
           --volname "Open-Ephys Installer" \
           --volicon "open-ephys/open-ephys.app/Contents/Resources/Icon.icns" \
@@ -118,6 +118,6 @@ jobs:
           --app-drop-link 500 188 \
           "Open-Ephys-Installer.dmg" \
           "open-ephys/"
-        installer=Open_Ephys_GUI_${gui_ver}-beta.dmg
+        installer=Open_Ephys_GUI_${gui_ver}.dmg
         mv -v Open-Ephys-Installer.dmg $installer
-        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Test-Installer/mac/$installer"
+        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Dev-Installer/mac/$installer"
