--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -84,14 +84,14 @@ jobs:
         cp -r Release open-ephys
         cp -r ../Resources/DLLs/FrontPanelUSB-DriverOnly-4.5.5.exe open-ephys
         cp ../LICENSE open-ephys
-        gui_ver="v0.6.0-rc3"
-        zipfile=open-ephys-${gui_ver}-windows-beta.zip
+        gui_ver="v0.6.0-dev"
+        zipfile=open-ephys-${gui_ver}-windows.zip
         powershell Compress-Archive -Path "open-ephys" -DestinationPath ${zipfile}
         user_info="X-JFrog-Art-Api:$artifactoryApiKey"
-        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Test/windows/$zipfile"
+        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Dev/windows/$zipfile"
         cd ../Resources/Installers/Windows
         iscc "windows_installer_script.iss"
-        installer=Install-Open-Ephys-GUI-${gui_ver}-beta.exe
+        installer=Install-Open-Ephys-GUI-${gui_ver}.exe
         mv Open-Ephys_Installer.exe $installer
-        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Test-Installer/windows/$installer"
+        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Dev-Installer/windows/$installer"
       shell: bash
