--- a/Source/Processors/CMakeLists.txt
+++ b/Source/Processors/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(DataThreads)
 add_subdirectory(Dsp)
 add_subdirectory(Editors)
 add_subdirectory(Events)
+add_subdirectory(EventTranslator)
 add_subdirectory(FileReader)
 add_subdirectory(GenericProcessor)
 add_subdirectory(Merger)
