--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -41,7 +41,6 @@ jobs:
         cd Build
         cp -r Release open-ephys
         cp -r ../Resources/DLLs/FrontPanelUSB-DriverOnly-4.5.5.exe open-ephys
-        cp -r ../Resources/DataFiles open-ephys
         cp ../LICENSE open-ephys
         gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
         zipfile=open-ephys-${gui_ver}-windows-beta.zip
@@ -55,14 +54,13 @@ jobs:
         curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Test-Installer/windows/$installer"
       shell: bash
     - name: deploy_release
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       env:
         artifactoryApiKey: ${{ secrets.artifactoryApiKey }}
       run: |
         cd Build
         cp -r Release open-ephys
         cp -r ../Resources/DLLs/FrontPanelUSB-DriverOnly-4.5.5.exe open-ephys
-        cp -r ../Resources/DataFiles open-ephys
         cp ../LICENSE open-ephys
         gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
         zipfile=open-ephys-${gui_ver}-windows.zip
@@ -74,24 +72,4 @@ jobs:
         installer=Install-Open-Ephys-GUI-${gui_ver}.exe
         mv Open-Ephys_Installer.exe $installer
         curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Release-Installer/windows/$installer"
-      shell: bash
-    - name: deploy_dev
-      if: github.ref == 'refs/heads/development-juce6'
-      env:
-        artifactoryApiKey: ${{ secrets.artifactoryApiKey }}
-      run: |
-        cd Build
-        cp -r Release open-ephys
-        cp -r ../Resources/DLLs/FrontPanelUSB-DriverOnly-4.5.5.exe open-ephys
-        cp ../LICENSE open-ephys
-        gui_ver="v0.6.0-dev"
-        zipfile=open-ephys-${gui_ver}-windows.zip
-        powershell Compress-Archive -Path "open-ephys" -DestinationPath ${zipfile}
-        user_info="X-JFrog-Art-Api:$artifactoryApiKey"
-        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Dev/windows/$zipfile"
-        cd ../Resources/Installers/Windows
-        iscc "windows_installer_script.iss"
-        installer=Install-Open-Ephys-GUI-${gui_ver}.exe
-        mv Open-Ephys_Installer.exe $installer
-        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Dev-Installer/windows/$installer"
       shell: bash
