--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -36,7 +36,6 @@ jobs:
         gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
         cd Build
         cp -r Release open-ephys
-        cp -r ../Resources/DataFiles open-ephys
         cp ../LICENSE open-ephys
         zipfile=open-ephys-${gui_ver}-linux-beta.zip
         zip -r $zipfile open-ephys
@@ -53,14 +52,13 @@ jobs:
         curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Test-Installer/linux/$installer"
       shell: bash
     - name: deploy_release
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/main'
       env:
         artifactoryApiKey: ${{ secrets.artifactoryApiKey }}
       run: |
         gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
         cd Build
         cp -r Release open-ephys
-        cp -r ../Resources/DataFiles open-ephys
         cp ../LICENSE open-ephys
         zipfile=open-ephys-${gui_ver}-linux.zip
         zip -r $zipfile open-ephys
@@ -75,27 +73,4 @@ jobs:
         installer=open-ephys-gui-${gui_ver}.deb
         mv Open-Ephys_Installer.deb $installer
         curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Release-Installer/linux/$installer"
-      shell: bash
-    - name: deploy_dev
-      if: github.ref == 'refs/heads/development-juce6'
-      env:
-        artifactoryApiKey: ${{ secrets.artifactoryApiKey }}
-      run: |
-        gui_ver="v0.6.0-dev"
-        cd Build
-        cp -r Release open-ephys
-        cp ../LICENSE open-ephys
-        zipfile=open-ephys-${gui_ver}-linux.zip
-        zip -r $zipfile open-ephys
-        user_info="X-JFrog-Art-Api:$artifactoryApiKey"
-        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Dev/linux/$zipfile"
-        cd ../Resources/Installers/Linux/Open-Ephys_Installer
-        mkdir -p usr/local/bin/open-ephys-gui
-        cp -r ../../../../Build/Release/* usr/local/bin/open-ephys-gui
-        cp ../../../Scripts/40-open-ephys.rules usr/local/bin/open-ephys-gui
-        cd ..
-        dpkg-deb --build Open-Ephys_Installer
-        installer=open-ephys-gui-${gui_ver}.deb
-        mv -v Open-Ephys_Installer.deb $installer
-        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Dev-Installer/linux/$installer"
       shell: bash
