--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -33,6 +33,26 @@ jobs:
         msbuild Build/ALL_BUILD.vcxproj -p:Configuration=Release -p:Platform=x64
 #   - name: test
 #     run: cd build && ctest
+    - name: deploy_dev
+      if: github.ref == 'refs/heads/development'
+      env:
+        artifactoryApiKey: ${{ secrets.artifactoryApiKey }}
+      run: |
+        cd Build
+        cp -r Release open-ephys
+        cp -r ../Resources/DLLs/FrontPanelUSB-DriverOnly-4.5.5.exe open-ephys
+        cp ../LICENSE open-ephys
+        gui_ver=$(git describe --tags $(git rev-list --tags --max-count=1))
+        zipfile=open-ephys-latest-windows-dev.zip
+        powershell Compress-Archive -Path "open-ephys" -DestinationPath ${zipfile}
+        user_info="X-JFrog-Art-Api:$artifactoryApiKey"
+        curl -H $user_info -T $zipfile "https://openephysgui.jfrog.io/artifactory/Dev/windows/$zipfile"
+        cd ../Resources/Installers/Windows
+        iscc "windows_installer_script.iss"
+        installer=Install-Open-Ephys-GUI-latest-dev.exe
+        mv Open-Ephys_Installer.exe $installer
+        curl -H $user_info -T $installer "https://openephysgui.jfrog.io/artifactory/Dev-Installer/windows/$installer"
+      shell: bash
     - name: deploy_test
       if: github.ref == 'refs/heads/testing'
       env:
