Add missing security framework for MacOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,6 +223,7 @@ elseif(APPLE)
 		"-framework OpenGL"
 		"-framework QTKit"
 		"-framework QuartzCore"
+		"-framework Security"
 		"-framework WebKit"
 	)
 
