--- a/Plugins/BasicSpikeDisplay/CMakeLists.txt
+++ b/Plugins/BasicSpikeDisplay/CMakeLists.txt
@@ -23,6 +23,10 @@ add_sources(${PLUGIN_NAME}
 	SpikeDisplayNode/SpikeDisplayNode.cpp
 	SpikeDisplayNode/SpikeDisplayNode.h
 	)
+
+if(BUILD_TESTS)
+    add_subdirectory(Tests)
+endif()
 	
 #optional: create IDE groups
 plugin_create_filters()
