--- a/Plugins/ChannelMappingNode/CMakeLists.txt
+++ b/Plugins/ChannelMappingNode/CMakeLists.txt
@@ -12,6 +12,10 @@ add_sources(${PLUGIN_NAME}
 	ChannelMappingEditor.h
 	PrbFormat.h
 	)
+
+if(BUILD_TESTS)
+    add_subdirectory(Tests)
+endif()
 	
 #optional: create IDE groups
 #plugin_create_filters()
