--- a/Plugins/PhaseDetector/CMakeLists.txt
+++ b/Plugins/PhaseDetector/CMakeLists.txt
@@ -11,6 +11,10 @@ add_sources(${PLUGIN_NAME}
 	PhaseDetectorEditor.cpp
 	PhaseDetectorEditor.h
 	)
+
+if(BUILD_TESTS)
+    add_subdirectory(Tests)
+endif()
 	
 #optional: create IDE groups
 #plugin_create_filters()
