--- a/Plugins/FilterNode/CMakeLists.txt
+++ b/Plugins/FilterNode/CMakeLists.txt
@@ -11,6 +11,10 @@ add_sources(${PLUGIN_NAME}
 	FilterEditor.cpp
 	FilterEditor.h
 	)
-	
+if(BUILD_TESTS)
+    add_subdirectory(Tests)
+endif()
+
+
 #optional: create IDE groups
 #plugin_create_filters()
