Initial support for auto updating the GUI
Add support for checking and downloading latest version of the GUI

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -4,6 +4,8 @@
 add_sources(open-ephys 
 	AccessClass.h
 	AccessClass.cpp
+	AutoUpdater.cpp
+	AutoUpdater.h
 	CoreServices.h
 	CoreServices.cpp
 	MainWindow.h
