Implementing RecordNodeTests along with additional test infrastructure
Implementing the tests for the RecordNode, which necessitated some
changes to the underlying test harnesses / infrastructure. Also, a few
bugs in the RecordNode itself were fixed, as they were causing crashes
(and presumingly can occur during real runtime too).

Main part of the infrastructure change is found in `ProcessorTester`.
Aside from making it a class that can be composed instead of inherited,
it now spins up more of the required OpenEphys infrastructure, including
the MessageCenter, ControlPanel, and ProcessorGraph. It automatically
adds the `FakeSourceNode` and then allows for creating a new processor
and attaching it to the end of this chain.

The immediate reason for the change was because `RecordNode` expects a
decent amount of global state to exist, such as those states in
AccessClass, but presumingly this change can be applied for other
plugins.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,12 @@ string(REPLACE "." "," GUI_VERSION_COMMA ${GUI_VERSION})
 
 set(CMAKE_OSX_DEPLOYMENT_TARGET "10.15" CACHE STRING "Minimum OS X deployment version" FORCE)
 set(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "Build architecture for Mac OS X" FORCE)
-set(CMAKE_OSX_SYSROOT "")
+
+# Switching this flag to OFF (i.e. NOT blanking CMAKE_OSX_ROOT) is required for some Mac users to find stdlib files
+set(ERASE_CMAKE_OSX_SYSROOT ON CACHE BOOL "Whether to set the CMAKE_OSX_SYSROOT to blank")
+if (ERASE_CMAKE_OSX_SYSROOT)
+	set(CMAKE_OSX_SYSROOT "")
+endif()
 if ((NOT ${CMAKE_CURRENT_BINARY_DIR} STREQUAL ${CMAKE_CURRENT_SOURCE_DIR}/Build ) AND (NOT OE_DONT_CHECK_BUILD_PATH))
 message(FATAL_ERROR "Please run cmake inside the Build folder to build the binaries in the predefined paths.\nSet the OE_DONT_CHECK_BUILD_PATH cmake variable to TRUE to disable this error")
 endif()
