--- a/TestHelpers/CMakeLists.txt
+++ b/TestHelpers/CMakeLists.txt
@@ -5,7 +5,12 @@ add_library(test_helpers SHARED)
 target_compile_features(test_helpers PRIVATE cxx_std_17)
 
 add_dependencies(test_helpers gui_testable_source)
-target_include_directories(test_helpers PRIVATE ${JUCE_DIRECTORY} ${JUCE_DIRECTORY}/modules ${PLUGINS_DIRECTORY}/Headers include)
+target_include_directories(test_helpers
+        PRIVATE
+        ${JUCE_DIRECTORY}
+        ${JUCE_DIRECTORY}/modules
+        ${PLUGINS_DIRECTORY}/Headers
+        ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(test_helpers PRIVATE gui_testable_source)
 
 set_property(TARGET test_helpers PROPERTY RUNTIME_OUTPUT_DIRECTORY ${BIN_TESTS_DIR}/common)
