--- a/Tests/UI/CMakeLists.txt
+++ b/Tests/UI/CMakeLists.txt
@@ -1,7 +1,10 @@
-cmake_minimum_required(VERSION 3.15)
 
 include(../ComponentRules.cmake)
-
 add_sources(${COMPONENT_NAME}_tests
-    DataViewportTests.cpp
+		DataViewportTests.cpp
+)
+target_include_directories(
+		${COMPONENT_NAME}_tests
+		PRIVATE
+		"${SOURCE_DIRECTORY}"
 )
