--- a/Tests/Processors/CMakeLists.txt
+++ b/Tests/Processors/CMakeLists.txt
@@ -6,4 +6,5 @@ target_include_directories(${COMPONENT_NAME}_tests PRIVATE "${SOURCE_DIRECTORY}/
 
 add_sources(${COMPONENT_NAME}_tests
     DataBufferTests.cpp
+    RecordNodeTests.cpp
 )
