Add more unit tests; have test infra use ProcessBlock for Plugin tests

--- a/Source/Utils/CMakeLists.txt
+++ b/Source/Utils/CMakeLists.txt
@@ -5,6 +5,10 @@ add_sources(open-ephys
 	OpenEphysHttpServer.h
 	ListSliceParser.h
 	ListSliceParser.cpp
+	BroadcastParser.h
+	BroadcastParser.cpp
+	BroadcastPayload.h
+	BroadcastPayload.cpp
 	Utils.h
 )
 
