Update FileReader to use new Parameters

--- a/Source/Processors/Editors/CMakeLists.txt
+++ b/Source/Processors/Editors/CMakeLists.txt
@@ -18,6 +18,7 @@ add_sources(open-ephys
 	StreamSelector.h
 	PopupChannelSelector.cpp
 	PopupChannelSelector.h
+	PopupTimeEditor.h
 )
 
 #add nested directories
