Add ParameterOwner class to handle parameters
Move parameter storage, access, and handling functionality from InfoObject to the ParameterOwner class.

--- a/Source/Processors/Parameter/CMakeLists.txt
+++ b/Source/Processors/Parameter/CMakeLists.txt
@@ -11,6 +11,8 @@ add_sources(open-ephys
 	ParameterCollection.cpp
 	ParameterCollection.h
 	ParameterHelpers.h
+	ParameterOwner.cpp
+	ParameterOwner.h
 )
 
 #add nested directories
