--- a/Plugins/ArduinoOutput/CMakeLists.txt
+++ b/Plugins/ArduinoOutput/CMakeLists.txt
@@ -18,7 +18,11 @@ if(MSVC)
 endif()
 
 if(BUILD_TESTS)
-    add_subdirectory(Tests)
+		if(MSVC)
+			target_link_libraries(${PLUGIN_NAME}_testable PUBLIC Winmm.lib)
+		endif()
+    	copy_sources(${PLUGIN_NAME} ${PLUGIN_NAME}_testable)
+     	add_subdirectory(Tests)
 endif()
 #optional: create IDE groups
 plugin_create_filters()
