--- a/Plugins/LfpDisplayNode/CMakeLists.txt
+++ b/Plugins/LfpDisplayNode/CMakeLists.txt
@@ -59,6 +59,7 @@ add_sources(${PLUGIN_NAME}
 	)
 
 if(BUILD_TESTS)
+    copy_sources(${PLUGIN_NAME} ${PLUGIN_NAME}_testable)
     add_subdirectory(Tests)
 endif()
 	
