Add support for parameters and parameter editors in Visualizer

--- a/Source/Processors/Parameter/CMakeLists.txt
+++ b/Source/Processors/Parameter/CMakeLists.txt
@@ -10,6 +10,8 @@ add_sources(open-ephys
 	ParameterEditor.h
 	ParameterCollection.cpp
 	ParameterCollection.h
+	ParameterEditorOwner.cpp
+	ParameterEditorOwner.h
 	ParameterHelpers.h
 	ParameterOwner.cpp
 	ParameterOwner.h
