Adding recording dir set/get changes and fixing parameter
These were changes we had on a live branch during the June pig cases but
that I never committed to main. Exposes the "root recording dir" via the
HTTP API and fixes string parameters in the API.

--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,7 @@ Resources/Build-files/Info-App.plist
 #12. installed commonlibs
 installed_libs
 
-#13. VSCode related
+#13. VSCode/IDE related
 .vscode/
 build/
+.idea
