[WIP] Initial support for Empty Processors

--- a/Source/Processors/CMakeLists.txt
+++ b/Source/Processors/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(AudioNode)
 add_subdirectory(DataThreads)
 add_subdirectory(Dsp)
 add_subdirectory(Editors)
+add_subdirectory(EmptyProcessor)
 add_subdirectory(Events)
 add_subdirectory(EventTranslator)
 add_subdirectory(FileReader)
