--- a/Source/Utils/CMakeLists.txt
+++ b/Source/Utils/CMakeLists.txt
@@ -1,7 +1,6 @@
 #Open Ephys GUI direcroty-speciric file
 
-#add files in this folder
-add_sources(open-ephys 
+add_sources(open-ephys
 	OpenEphysHttpServer.h
 	ListSliceParser.h
 	ListSliceParser.cpp
@@ -11,6 +10,15 @@ add_sources(open-ephys
 	BroadcastPayload.cpp
 	Utils.h
 )
+
+# Dependent targets in the same CMake tree may have defined this cpp-httplib target already. To prevent conflicts
+# of different versions, try to utilize a single one here if it already exists. See OpenEphysHttpServer.h for use of the
+# below macro.
+if (TARGET httplib::httplib)
+	target_link_libraries(open-ephys httplib::httplib)
+else()
+	target_compile_definitions(open-ephys OPENEPHYS_INCLUDE_HTTPLIB)
+endif()
 
 #add nested directories
 
